[gd_scene load_steps=6 format=3 uid="uid://cb3ej8nlybhvm"]

[ext_resource type="Script" path="res://Hud/icon_button.gd" id="1_0b77l"]
[ext_resource type="Theme" uid="uid://dt7rd31blnvth" path="res://Theme/Invis.tres" id="2_3bb0d"]
[ext_resource type="SpriteFrames" uid="uid://g71x1b7vd3pt" path="res://Sprites/animations/autobuyer.tres" id="2_7272n"]
[ext_resource type="Texture2D" uid="uid://dlxx28hr2xdck" path="res://Sprites/Hud/Check.png" id="3_c3ale"]
[ext_resource type="Texture2D" uid="uid://408er70eh4ns" path="res://Sprites/Hud/upgrades.png" id="4_w61eh"]

[node name="Icon Button" type="MarginContainer"]
custom_minimum_size = Vector2(36, 36)
offset_right = 36.0
offset_bottom = 36.0
script = ExtResource("1_0b77l")

[node name="Button" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_3bb0d")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 2
texture = ExtResource("4_w61eh")
expand_mode = 2
stretch_mode = 5

[node name="Control" type="Control" parent="MarginContainer/Control/Icon"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="Autobuyer" type="AnimatedSprite2D" parent="MarginContainer/Control/Icon/Control"]
unique_name_in_owner = true
sprite_frames = ExtResource("2_7272n")
frame_progress = 0.691775

[node name="Icon Shadow" type="TextureRect" parent="MarginContainer/Control/Icon"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 25.0
offset_bottom = 25.0
size_flags_horizontal = 0
mouse_filter = 2
texture = ExtResource("4_w61eh")
expand_mode = 2
stretch_mode = 5

[node name="Check" type="TextureRect" parent="MarginContainer/Control/Icon"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_right = 24.0
offset_bottom = 24.0
mouse_filter = 2
texture = ExtResource("3_c3ale")
expand_mode = 1

[node name="CheckShadow" type="TextureRect" parent="MarginContainer/Control/Icon/Check"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 25.0
offset_bottom = 25.0
mouse_filter = 2
texture = ExtResource("3_c3ale")
expand_mode = 1

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
